--- a/test-site/index.html
+++ b/test-site/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Manee's example page</title>
+        <title>Pasit's example page</title>
     </head>
     <body>
         <img src="images/kku.jpeg" width="50%"
